--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -755,7 +755,7 @@ h5,h6{font-size:1em;}
                 identifier: 'nickname',
                 rules: [{
                     type: 'empty',
-                    prompt: '请输入你的大名'
+                    prompt: '请输入你的昵称'
                 }]
             },
             type: {
