--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -25,9 +25,9 @@
       <a href="#" th:href="@{/archive}"  class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active'"><i class="mini clone icon"></i>归档</a>
       <a href="#" th:href="@{/about}" class="m-item item m-mobile-hide" th:classappend="${n==5} ? 'active'"><i class="mini info icon"></i>关于我</a>
       <div class="right m-item item m-mobile-hide">
-        <form name="search" action="#"    th:action="@{/search}" method="get" target="_blank">
+        <form name="search" action="#" th:action="@{/search}" method="get" target="_blank">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
-            <input type="text" name="query" placeholder="找找看咯...." th:value="${query}">
+            <input type="text" name="query" placeholder="Search...." th:value="${query}">
             <i onclick="document.forms['search'].submit()" class="search link icon"></i>
           </div>
         </form>
@@ -54,10 +54,8 @@
       </div>
       <div class="three wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced " >最新博客</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
-          <a href="#" class="item m-text-thin">用户故事（User Story）</a>
+        <div class="ui inverted link list" th:each="blog : ${footerBlog}">
+          <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="item m-text-thin" th:text="${blog.title}">用户故事（User Story）</a>
         </div>
       </div>
       <div class="three wide column">
@@ -69,7 +67,7 @@
       </div>
       <div class="seven wide column">
         <h4 class="ui inverted header m-text-thin m-text-spaced ">Blog</h4>
-        <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的个人博客、会分享关于编程、写作、思考相关的任何内容，希望可以给来到这儿的人有所帮助...</p>
+        <p class="m-text-thin m-text-spaced m-opacity-mini">嘿嘿！</p>
       </div>
     </div>
     <div class="ui inverted section divider"></div>
