--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,7 +83,7 @@
 
               <div class="five wide column">
                 <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
-                  <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}"  alt="没了嘿嘿" class="ui rounded image">
+                  <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}"  alt="图片去外太空了呢" class="ui rounded image">
                 </a>
               </div>
 
